Remove unavailable advanced search options

--- a/app/src/main/res/layout/widget_advance_search_table.xml
+++ b/app/src/main/res/layout/widget_advance_search_table.xml
@@ -12,7 +12,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,103 +25,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="@dimen/advance_search_table_item_margin"
-            android:layout_weight="1"
-            android:checked="true"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:text="@string/search_sname" />
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
-            android:layout_weight="1"
-            android:checked="true"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:text="@string/search_stags" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/advance_search_table_item_margin"
-        android:layout_marginBottom="@dimen/advance_search_table_item_margin">
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="@dimen/advance_search_table_item_margin"
-            android:layout_weight="1"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:text="@string/search_sdesc" />
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
-            android:layout_weight="1"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:text="@string/search_storr" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/advance_search_table_item_margin"
-        android:layout_marginBottom="@dimen/advance_search_table_item_margin">
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="@dimen/advance_search_table_item_margin"
-            android:layout_weight="1"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:text="@string/search_sto" />
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
-            android:layout_weight="1"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:text="@string/search_sdt1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/advance_search_table_item_margin"
-        android:layout_marginBottom="@dimen/advance_search_table_item_margin">
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="@dimen/advance_search_table_item_margin"
-            android:layout_weight="1"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:text="@string/search_sdt2" />
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
             android:layout_weight="1"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:text="@string/search_sh" />
+
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
+            android:layout_weight="1"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:text="@string/search_sto" />
     </LinearLayout>
 
     <LinearLayout
