Support resize thumb
Co-Authored-By: tarsin <43900799+asuka-mio@users.noreply.github.com>

--- a/app/src/main/res/layout/item_download.xml
+++ b/app/src/main/res/layout/item_download.xml
@@ -29,12 +29,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.hippo.ehviewer.widget.FixedThumb
+        <com.hippo.ehviewer.widget.ResizeableFixedThumb
             android:id="@+id/thumb"
-            android:layout_width="@dimen/gallery_list_thumb_width"
-            android:layout_height="@dimen/gallery_list_thumb_height"
-            app:maxAspect="1.333"
-            app:minAspect="0.333"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:alwaysCutAndScale="true"
             app:retryType="longClick" />
 
         <TextView
