--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -93,6 +93,15 @@
         app:entryValues="@array/detail_size_entry_values"
         app:iconSpaceReserved="false" />
 
+    <SeekBarPreference
+        android:defaultValue="40"
+        android:key="list_tile_size"
+        android:title="@string/settings_eh_list_tile_thumb_size"
+        android:max="60"
+        app:iconSpaceReserved="false"
+        app:min="20"
+        app:showSeekBarValue="true" />
+
     <rikka.preference.SimpleMenuPreference
         android:defaultValue="1"
         android:key="thumb_size"
