--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -142,6 +142,13 @@
 
     <SwitchPreferenceCompat
         android:defaultValue="true"
+        android:key="show_gallery_comments"
+        android:summary="@string/settings_eh_show_gallery_comments_summary"
+        android:title="@string/settings_eh_show_gallery_comments"
+        app:iconSpaceReserved="false" />
+
+    <SwitchPreferenceCompat
+        android:defaultValue="true"
         android:key="show_tag_translations"
         android:summary="@string/settings_eh_show_tag_translations_summary"
         android:title="@string/settings_eh_show_tag_translations"
