--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -160,6 +160,15 @@
         app:iconSpaceReserved="false"
         app:url="@string/settings_eh_tag_translations_source_url" />
 
+    <SeekBarPreference
+        android:defaultValue="60"
+        android:key="preview_num"
+        android:title="@string/settings_eh_preview_num"
+        android:max="200"
+        app:iconSpaceReserved="false"
+        app:min="0"
+        app:showSeekBarValue="true" />
+
     <Preference
         android:fragment="com.hippo.ehviewer.ui.fragment.FilterFragment"
         android:key="filter"
