--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -179,7 +179,13 @@
     <SwitchPreferenceCompat
         android:defaultValue="true"
         android:key="request_news"
-        android:title="@string/settings_request_news_title"
+        android:title="@string/settings_eh_request_news"
+        app:iconSpaceReserved="false" />
+
+    <SwitchPreferenceCompat
+        android:defaultValue="true"
+        android:key="hide_hv_events"
+        android:title="@string/settings_eh_hide_hv_events"
         app:iconSpaceReserved="false" />
 
 </PreferenceScreen>
