--- a/app/src/main/res/xml/advanced_settings.xml
+++ b/app/src/main/res/xml/advanced_settings.xml
@@ -106,6 +106,12 @@
         app:iconSpaceReserved="false" />
 
     <Preference
+        android:key="backup_favorite"
+        android:summary="@string/settings_advanced_backup_favorite_summary"
+        android:title="@string/settings_advanced_backup_favorite"
+        app:iconSpaceReserved="false" />
+
+    <Preference
         android:key="open_by_default"
         android:title="@string/open_by_default"
         app:iconSpaceReserved="false" />
