New attributes require API 28

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -155,15 +155,15 @@
     </style>
 
     <style name="Widget.FloatingActionButton" parent="Widget.MaterialComponents.FloatingActionButton">
-        <item name="android:outlineAmbientShadowColor">?attr/widgetColorThemePrimary</item>
-        <item name="android:outlineSpotShadowColor">?attr/widgetColorThemePrimary</item>
+        <item name="android:outlineAmbientShadowColor" tools:targetApi="28">?attr/widgetColorThemePrimary</item>
+        <item name="android:outlineSpotShadowColor" tools:targetApi="28">?attr/widgetColorThemePrimary</item>
         <item name="backgroundTint">?attr/widgetColorThemePrimary</item>
         <item name="tint">#fff</item>
     </style>
 
     <style name="Widget.FloatingActionButton.Accent" parent="Widget.MaterialComponents.FloatingActionButton">
-        <item name="android:outlineAmbientShadowColor">?attr/widgetColorThemeAccent</item>
-        <item name="android:outlineSpotShadowColor">?attr/widgetColorThemeAccent</item>
+        <item name="android:outlineAmbientShadowColor" tools:targetApi="28">?attr/widgetColorThemeAccent</item>
+        <item name="android:outlineSpotShadowColor" tools:targetApi="28">?attr/widgetColorThemeAccent</item>
         <item name="backgroundTint">?attr/widgetColorThemeAccent</item>
         <item name="tint">#fff</item>
     </style>
