--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -84,15 +84,6 @@
         app:entryValues="@array/list_mode_entry_values"
         app:iconSpaceReserved="false" />
 
-    <rikka.preference.SimpleMenuPreference
-        android:defaultValue="0"
-        android:key="detail_size"
-        android:summary="%s"
-        android:title="@string/settings_eh_detail_size"
-        app:entries="@array/detail_size_entries"
-        app:entryValues="@array/detail_size_entry_values"
-        app:iconSpaceReserved="false" />
-
     <SeekBarPreference
         android:defaultValue="40"
         android:key="list_tile_size"
@@ -101,6 +92,15 @@
         app:iconSpaceReserved="false"
         app:min="20"
         app:showSeekBarValue="true" />
+
+    <rikka.preference.SimpleMenuPreference
+        android:defaultValue="0"
+        android:key="detail_size"
+        android:summary="%s"
+        android:title="@string/settings_eh_detail_size"
+        app:entries="@array/detail_size_entries"
+        app:entryValues="@array/detail_size_entry_values"
+        app:iconSpaceReserved="false" />
 
     <rikka.preference.SimpleMenuPreference
         android:defaultValue="1"
@@ -159,6 +159,7 @@
         android:key="preview_num"
         android:title="@string/settings_eh_preview_num"
         android:max="200"
+        app:singleLineTitle="false"
         app:iconSpaceReserved="false"
         app:min="0"
         app:showSeekBarValue="true" />
@@ -171,13 +172,13 @@
         app:iconSpaceReserved="false" />
 
     <SwitchPreferenceCompat
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:key="cellular_network_warning"
         android:title="@string/settings_eh_metered_network_warning"
         app:iconSpaceReserved="false" />
 
     <SwitchPreferenceCompat
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:key="request_news"
         android:title="@string/settings_eh_request_news"
         app:iconSpaceReserved="false" />
