--- a/app/src/main/res/layout/scene_gallery_comments.xml
+++ b/app/src/main/res/layout/scene_gallery_comments.xml
@@ -70,7 +70,8 @@
             android:minHeight="56dp"
             android:padding="@dimen/keyline_margin"
             android:textColor="?colorOnPrimarySurface"
-            android:theme="@style/CommentEditText" />
+            android:theme="@style/CommentEditText"
+            android:importantForAutofill="no" />
 
         <ImageView
             android:id="@+id/send"
