--- a/app/src/main/res/layout/activity_hosts.xml
+++ b/app/src/main/res/layout/activity_hosts.xml
@@ -37,7 +37,7 @@
         android:textSize="@dimen/text_super_large"
         app:fitsSystemWindowsInsets="bottom" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
