--- a/app/src/main/res/layout/dialog_js_prompt.xml
+++ b/app/src/main/res/layout/dialog_js_prompt.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/keyline_margin"
-        android:inputType="text" />
+        android:inputType="text"
+        android:importantForAutofill="no" />
 
 </LinearLayout>
