--- a/app/src/main/res/layout/activity_hosts.xml
+++ b/app/src/main/res/layout/activity_hosts.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
+        android:paddingBottom="@dimen/fab_rv_padding_size"
         app:fitsSystemWindowsInsets="bottom" />
 
     <TextView
