--- a/app/src/main/res/layout/scene_gallery_comments.xml
+++ b/app/src/main/res/layout/scene_gallery_comments.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
+            android:paddingBottom="@dimen/fab_rv_padding_size"
             app:fitsSystemWindowsInsets="bottom" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
