--- a/app/src/main/res/layout/widget_content_layout.xml
+++ b/app/src/main/res/layout/widget_content_layout.xml
@@ -49,7 +49,9 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clipToPadding="false" />
+                android:paddingLeft="@dimen/gallery_content_margin_v"
+                android:paddingRight="@dimen/gallery_content_margin_v"
+                android:paddingBottom="@dimen/gallery_content_margin_h" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
