--- a/app/src/main/res/xml/privacy_settings.xml
+++ b/app/src/main/res/xml/privacy_settings.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Preference
-        android:fragment="com.hippo.ehviewer.ui.fragment.SetSecurityFragment"
-        android:key="pattern_protection"
+        android:key="com.hippo.ehviewer.ui.fragment.SetSecurityFragment"
         android:title="@string/settings_privacy_pattern_protection_title"
         app:iconSpaceReserved="false" />
 
