--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -60,18 +60,6 @@
         <item>1</item>
     </string-array>
 
-    <string-array name="thumb_size_entries" translatable="false">
-        <item>@string/settings_eh_thumb_size_large</item>
-        <item>@string/settings_eh_thumb_size_middle</item>
-        <item>@string/settings_eh_thumb_size_small</item>
-    </string-array>
-
-    <string-array name="thumb_size_entry_values" translatable="false">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-    </string-array>
-
     <string-array name="thumb_resolution_entries" translatable="false">
         <item>@string/settings_eh_thumb_resolution_auto</item>
         <item>250x</item>
@@ -248,6 +236,8 @@
         <item>@string/filter_uploader</item>
         <item>@string/filter_tag</item>
         <item>@string/filter_tag_namespace</item>
+        <item>@string/filter_commenter</item>
+        <item>@string/filter_comment</item>
     </string-array>
 
     <string-array name="app_language_entries">
