--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -56,10 +56,6 @@
     <dimen name="gallery_list_column_width_long">480dp</dimen>
     <dimen name="gallery_list_column_width_short">320dp</dimen>
 
-    <dimen name="gallery_grid_column_width_large">160dp</dimen>
-    <dimen name="gallery_grid_column_width_middle">120dp</dimen>
-    <dimen name="gallery_grid_column_width_small">80dp</dimen>
-
     <!-- 4dp - 4dp, 4dp for card padding -->
     <dimen name="search_layout_interval">0dp</dimen>
     <!-- 8dp - 4dp, 4dp for card padding -->
@@ -102,6 +98,7 @@
     <dimen name="fab_layout_secondary_margin">16dp</dimen>
     <dimen name="fab_size">56dp</dimen>
     <dimen name="fab_min_size">40dp</dimen>
+    <dimen name="fab_rv_padding_size">80dp</dimen>
 
     <!-- Slider -->
     <dimen name="slider_bubble_width">26dp</dimen>
