--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -186,6 +186,7 @@
 
     <SwitchPreferenceCompat
         android:defaultValue="false"
+        android:dependency="request_news"
         android:key="hide_hv_events"
         android:title="@string/settings_eh_hide_hv_events"
         app:iconSpaceReserved="false" />
