--- a/app/src/main/res/values-zh-rCN/bools.xml
+++ b/app/src/main/res/values-zh-rCN/bools.xml
@@ -14,13 +14,8 @@
   ~ limitations under the License.
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
-    <string-array name="tag_translation_metadata" tools:ignore="InconsistentArrays">
-        <item>tag-translations-zh-rCN.sha1</item>
-        <item>https://raw.githubusercontent.com/Mapaler/EhViewer/tag-translations/tag-translations/tag-translations-zh-rCN.sha1</item>
-        <item>tag-translations-zh-rCN</item>
-        <item>https://raw.githubusercontent.com/Mapaler/EhViewer/tag-translations/tag-translations/tag-translations-zh-rCN</item>
-    </string-array>
+    <bool name="tag_translatable">true</bool>
 
 </resources>
