Support search downloads

--- a/app/src/main/res/menu/scene_download.xml
+++ b/app/src/main/res/menu/scene_download.xml
@@ -36,18 +36,19 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_open_download_labels"
-        android:icon="@drawable/ic_baseline_label_24"
-        android:title="@string/download_labels"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/action_start_all_reversed"
+        android:title="@string/download_start_all_reversed"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_reset_reading_progress"
         android:title="@string/download_reset_reading_progress"
         app:showAsAction="never" />
+
     <item
-        android:id="@+id/action_start_all_reversed"
-        android:title="@string/download_start_all_reversed"
+        android:id="@+id/action_open_download_labels"
+        android:icon="@drawable/ic_baseline_label_24"
+        android:title="@string/download_labels"
         app:showAsAction="never" />
 
 </menu>
