--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -273,7 +273,15 @@
         <item>@string/download_state_downloading</item>
         <item>@string/download_state_finish</item>
         <item>@string/download_state_failed</item>
-        <item>@string/download_search</item>
+        <item>@string/download_filter_title</item>
+        <item>@string/download_sort_by</item>
+    </string-array>
+
+    <string-array name="download_sort">
+        <item>@string/download_sort_default</item>
+        <item>@string/download_sort_shuffle</item>
+        <item>@string/download_sort_title</item>
+        <item>@string/download_sort_category</item>
     </string-array>
 
     <string-array name="read_theme_entries">
